--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,10 +1,8 @@
-name: Build and Test
+name: Build and test
 
 on:
   push:
-    branches: [main]
   pull_request:
-    branches: [main]
   workflow_dispatch:
 
 env:
@@ -12,9 +10,6 @@ env:
 
 jobs:
   check:
-    strategy:
-      fail-fast: true
-
     name: Foundry project
     runs-on: ubuntu-latest
     steps:
@@ -24,8 +19,10 @@ jobs:
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
-        with:
-          version: nightly
+
+      - name: Show Forge version
+        run: |
+          forge --version
 
       - name: Run Forge fmt
         run: |
@@ -34,7 +31,6 @@ jobs:
 
       - name: Run Forge build
         run: |
-          forge --version
           forge build --sizes
         id: build
 
