--- a/foundry.toml
+++ b/foundry.toml
@@ -4,7 +4,7 @@ out = "out"
 libs = ["lib"]
 evm_version = "london"
 solc = "0.8.27"
-optimizer = true
+optimizer = false
 optimizer_runs = 200
 block_gas_limit = 15000000
 verbosity=2
