--- a/foundry.toml
+++ b/foundry.toml
@@ -2,7 +2,7 @@
 src = "contracts"
 out = "out"
 libs = ["lib"]
-evm_version = "london"
+evm_version = "cancun"
 solc = "0.8.27"
 optimizer = true
 optimizer_runs = 200
