--- a/.github/workflows/slither_analysis.yml
+++ b/.github/workflows/slither_analysis.yml
@@ -13,6 +13,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
 
       - name: Run Slither
         uses: crytic/slither-action@v0.4.0
