--- a/.github/workflows/slither_analysis.yml
+++ b/.github/workflows/slither_analysis.yml
@@ -10,6 +10,10 @@ on:
 jobs:
   analyze:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+      issues: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
